@@ -1,23 +1,16 @@
 package fr.epistudio.epysia.editor.command;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public final class CompositeCommand implements EditorCommand {
 
-    private final List<EditorCommand> commands;
     private final String label;
-    private final String coalesceKey;
+    private final List<EditorCommand> commands;
 
     public CompositeCommand(String label, List<EditorCommand> commands) {
-        this(label, commands, null);
-    }
-
-    public CompositeCommand(String label, List<EditorCommand> commands, String coalesceKey) {
         this.label = label;
-        this.commands = Collections.unmodifiableList(new ArrayList<>(commands));
-        this.coalesceKey = coalesceKey;
+        this.commands = List.copyOf(commands);
     }
 
     @Override
@@ -30,15 +23,10 @@ public final class CompositeCommand implements EditorCommand {
     @Override
     public EditorCommand invert(CommandContext context) {
         List<EditorCommand> inverses = new ArrayList<>(commands.size());
-        for (int index = commands.size() - 1; index >= 0; index--) {
-            inverses.add(commands.get(index).invert(context));
+        for (int i = commands.size() - 1; i >= 0; i--) {
+            inverses.add(commands.get(i).invert(context));
         }
-        return new CompositeCommand(label, inverses, coalesceKey);
-    }
-
-    @Override
-    public String coalesceKey() {
-        return coalesceKey;
+        return new CompositeCommand(label, inverses);
     }
 
     @Override
